United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6902115 G1:assert(ignore_max_completed||thread->is_Java_thread()||SafepointSynchronize::is_at_safepoint())
6902115 : G1:assert(ignore_max_completed||thread->is_Java_thread()||SafepointSynchronize::is_at_safepoint())

Details
Type:
Bug
Submit Date:
2009-11-17
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
nsk.stress.jni.gclocker.gcl001
nsk/stress/jni/gclocker/gcl001
See:-

http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2009-11-16/G1_GC_Baseline/vm/solaris-amd64/server/mixed/solaris-amd64_server_mixed_nsk.stress.testlist/ResultDir/gcl001//hs_err_pid14648.log
I added the missing trailing parenthesis... and, umm..., removed the
space between "G1:" and "assert" -- the temptation to create a
nice long synopsis like that without any white-space was too
strong to resist! :-)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/2dd52dea6d28
                                     
2010-01-17
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/2dd52dea6d28
                                     
2010-01-13
SUGGESTED FIX

The fix for the assert is to remove the assert. The concurrent refine threads can re-enqueue cards, potentially filling an update buffer which is then enqueued. The assert trips during the enqueuing of the completed buffer.

Also it was noted that the block_start routine was returning an incorrect value. The fix for that is to use a "careful" version of block_start that uses only the block offset table entries themselves.
                                     
2009-11-21
EVALUATION

Assert is invalid.
                                     
2009-11-21



Hardware and Software, Engineered to Work Together