6902115: G1:assert(ignore_max_completed||thread->is_Java_thread()||SafepointSynchronize::is_at_safepoint())

Remove invalid assert and mangle filler objects in TLABs that are being retired.

Reviewed-by: ysr, jmasa